Fix firefox scrollbar color

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -160,18 +160,25 @@ h1, h2, h3, h4, h5, h6, p, div:not(.p-message-wrapper), .p-menu .p-menuitem-link
     font-size: 1.5em;
 }
 
-::-webkit-scrollbar {
-    width: 8px;
-    background-color: #F5F5F5;
+* {
+    scrollbar-width: thin;          /* "auto" or "thin" */
+    scrollbar-color: $pastel-red #ffecd2;   /* scroll thumb and track */
 }
 
-::-webkit-scrollbar-track {
+
+*::-webkit-scrollbar {
+    width: 8px;
+    background-color: #F5F5F5;
+    overflow-scrolling: auto !important;
+}
+
+*::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
     background-color: #F5F5F5;
     border-radius: 10px;
 }
 
-::-webkit-scrollbar-thumb {
+*::-webkit-scrollbar-thumb {
     border-radius: 10px;
     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
     background-image: -webkit-gradient(linear, left top, right top, from(#ffecd2), to($pastel-red));
@@ -179,7 +186,7 @@ h1, h2, h3, h4, h5, h6, p, div:not(.p-message-wrapper), .p-menu .p-menuitem-link
     background-image: linear-gradient(to right, #ffecd2 0%, $pastel-red 100%);
 }
 
-::-webkit-scrollbar-thumb:hover {
+*::-webkit-scrollbar-thumb:hover {
     background: #555;
 }
 
